[gd_scene load_steps=7 format=2]

[ext_resource path="res://ModeExplore/Menus/Training/Training.gd" type="Script" id=1]
[ext_resource path="res://ReusableUI/CharEditPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://ReusableUI/CharacterDetail/CharacterDetail.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assetts3.0/OtherUI/Equinox16Px.tres" type="DynamicFont" id=4]
[ext_resource path="res://ReusableUI/AbilityListPanel/AbilityListPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://ReusableUI/AbilityDetail/AbilityDetail.tscn" type="PackedScene" id=6]

[node name="CrewManagement" type="Panel" groups=[
"MAIN_MENU",
]]
margin_right = 1274.0
margin_bottom = 756.0
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tripane" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Tripane"]
margin_right = 419.0
margin_bottom = 755.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Tripane/VBox"]
margin_right = 419.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 4 )
text = "Unassigned"
align = 1

[node name="UnassignedList" type="ScrollContainer" parent="Tripane/VBox"]
margin_top = 27.0
margin_right = 419.0
margin_bottom = 755.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crew" type="VBoxContainer" parent="Tripane/VBox/UnassignedList"]
margin_right = 419.0
margin_bottom = 728.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Details" type="VBoxContainer" parent="Tripane"]
margin_left = 427.0
margin_right = 847.0
margin_bottom = 755.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Traits" parent="Tripane/Details" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 420.0
margin_bottom = 419.0

[node name="Other" parent="Tripane/Details" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 419.0
margin_right = 420.0
margin_bottom = 755.0

[node name="Abilities" type="VBoxContainer" parent="Tripane"]
margin_left = 855.0
margin_right = 1275.0
margin_bottom = 755.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="Label" type="Label" parent="Tripane/Abilities"]
margin_right = 420.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 4 )
text = "Abilities"
align = 1

[node name="Primary" parent="Tripane/Abilities" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 27.0
margin_right = 420.0
margin_bottom = 247.0
rect_min_size = Vector2( 0, 220 )
size_flags_vertical = 1

[node name="Secondary" parent="Tripane/Abilities" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 255.0
margin_right = 420.0
margin_bottom = 475.0
rect_min_size = Vector2( 0, 220 )
size_flags_vertical = 1

[node name="AbilityDetail" parent="Tripane/Abilities" instance=ExtResource( 6 )]
visible = false
margin_top = 483.0
margin_right = 420.0
margin_bottom = 755.0
size_flags_vertical = 3
[connection signal="abilityChanged" from="Tripane/Abilities/Primary" to="." method="_on_Primary_abilityChanged"]
[connection signal="abilityExit" from="Tripane/Abilities/Primary" to="." method="_on_Primary_abilityExit"]
[connection signal="abilityChanged" from="Tripane/Abilities/Secondary" to="." method="_on_Secondary_abilityChanged"]
[connection signal="abilityExit" from="Tripane/Abilities/Secondary" to="." method="_on_Secondary_abilityExit"]
